alb/argo-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd
  namespace: argocd
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: 'ip'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-1:500802690953:certificate/40dba56d-23cb-4a88-b88f-793862c5bc34
    alb.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  ingressClassName: alb
  rules:
    - host: lab.marcus-lab.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 443
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: argocd
#   namespace: argocd
#   annotations:
#     alb.ingress.kubernetes.io/scheme: internet-facing
#     alb.ingress.kubernetes.io/target-type: 'ip'
# spec:
#   ingressClassName: alb
#   rules:
#     - host: argocdlab.marcus-lab.online
#       http:
#         paths:
#           - path: /
#             pathType: Exact
#             backend:
#               service:
#                 name: argocd-server
#                 port:
#                   number: 80
